<resources>
    <string name="app_name">Take Home</string>
    <string name="user_id_input_placeholder">Enter a github user id</string>
    <string name="search_button_text">Search</string>
    <string name="error_msg_no_user_found">No user found</string>
    <string name="text_repo_title">%1$s/%2$s</string>
    <string name="text_fork">Fork</string>
    <string name="text_star">Star</string>
    <string name="text_total_forks">Total forks: %1$d</string>
    <string name="text_updated_at">Updated at: %1$s</string>
</resources>